--- a/src/main/resources/templates/EmployeeLogin/addCar.html
+++ b/src/main/resources/templates/EmployeeLogin/addCar.html
@@ -1,10 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Add Car</title>
+    <link rel="stylesheet" th:href="@{/style.css}" href="/style.css" />
 </head>
-<body>
+<body class="create-car-page">
+<div class="navbarTop">
+    <ul>
+        <li><a th:href="@{/}">Home</a></li>
+        <li><a th:href="@{/cars/list}">Show all cars</a></li>
+    </ul>
+</div>
+
+<div class="content-container">
+    <div class="container">
+        <h1>Add New Car</h1>
+
+        <form th:action="@{/cars/add}" method="post">
+            <label>Car Emission:</label>
+            <input type="number" name="carEmission" required><br>
+
+            <label>Year:</label>
+            <input type="number" name="year" required><br>
+
+            <label>Brand:</label>
+            <input type="text" name="brand" required><br>
+
+            <label>Model:</label>
+            <input type="text" name="model" required><br>
+
+            <label>Color:</label>
+            <input type="text" name="color" required><br>
+
+            <label>Equipment Level:</label>
+            <input type="text" name="equipmentLevel" required><br>
+
+            <label>Return Address:</label>
+            <input type="text" name="returnAddress" required><br>
+
+            <label>Vehicle Number:</label>
+            <input type="text" name="vehicleNumber" required><br>
+
+            <label>Chassis Number:</label>
+            <input type="text" name="chassisNumber" required><br>
+
+            <label>Price:</label>
+            <input type="number" step="0.01" name="price" required><br>
+
+            <label>Registration Fee:</label>
+            <input type="number" step="0.01" name="registrationFee" required><br>
+
+            <label>Is Car Available:</label>
+            <select name="isCarAvailable" required>
+                <option value="1">Yes</option>
+                <option value="0">No</option>
+            </select><br>
+
+            <div class="button-group">
+                <button type="submit" class="submit">Save Car</button>
+                <a th:href="@{/cars/list}" class="submit">Back to Car List</a>
+            </div>
+        </form>
+    </div>
+</div>
+
+<div class="footer">
+    <p>© 2025 Wishcloud</p>
+    <p>Projekt 3 - Gruppe 4</p>
+</div>
 
 </body>
 </html>
