--- a/src/main/resources/templates/Homepage/Login.html
+++ b/src/main/resources/templates/Homepage/Login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login og Opret Bruger - Bilabonnement</title>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
 <div class="header">
