--- a/src/main/resources/templates/EmployeeLogin/dashboard.html
+++ b/src/main/resources/templates/EmployeeLogin/dashboard.html
@@ -54,7 +54,7 @@
 
             <div class="card">
                 <h3>Søg medarbejdr</h3>
-                <a th:href="@{/searchEmplyee}" class=btn-link">Søg medarbejder</a>
+                <a th:href="@{/searchEmplyee}" class="btn-link">Søg medarbejder</a>
             </div>
         </section>
     </main>
