--- a/src/main/resources/templates/EmployeeLogin/dashboard.html
+++ b/src/main/resources/templates/EmployeeLogin/dashboard.html
@@ -53,8 +53,8 @@
             </div>
 
             <div class="card">
-                <h3>Søg medarbejdr</h3>
-                <a th:href="@{/searchEmplyee}" class="btn-link">Søg medarbejder</a>
+                <h3>Søg medarbejder</h3>
+                <a th:href="@{/searchEmployee}" class="btn-link">Søg medarbejder</a>
             </div>
         </section>
     </main>
