--- a/src/main/resources/templates/Homepage/index.html
+++ b/src/main/resources/templates/Homepage/index.html
@@ -13,7 +13,7 @@
     <nav>
         <a href="#">Hjem</a>
         <a href="#">Kontakt</a>
-        <a href="https://bilabonnement.dk" class="back-btn">Tilbage til hjemmesiden</a>
+        <a href="https://bilabonnement.dk" class="back-btn">Gå til Bilabonnement.dk</a>
     </nav>
 </div>
 
