--- a/src/main/resources/templates/EmployeeLogin/damageReport.html
+++ b/src/main/resources/templates/EmployeeLogin/damageReport.html
@@ -10,7 +10,9 @@
 
 <div class="layout">
     <div class="header">
-        <div class="logo">BILABONNEMENT</div>
+        <div class="logo">
+            <img src="/img/Logo.png" alt="BILABONNEMENT Logo">
+        </div>
         <nav>
             <a th:href="@{/}" class="back-btn">Tilbage</a>
         </nav>
