--- a/src/main/resources/templates/Homepage/index.html
+++ b/src/main/resources/templates/Homepage/index.html
@@ -9,8 +9,9 @@
 <body>
 
 <div class="header">
-    <div class="logo">BILABONNEMENT</div>
-    <nav>
+    <div class="logo">
+        <img src="/img/Logo.png" alt="BILABONNEMENT Logo">
+    </div>    <nav>
         <a href="#">Hjem</a>
         <a href="#">Kontakt</a>
         <a href="https://bilabonnement.dk" class="back-btn">Gå til Bilabonnement.dk</a>
