--- a/src/main/resources/templates/EmployeeLogin/dashboard.html
+++ b/src/main/resources/templates/EmployeeLogin/dashboard.html
@@ -25,36 +25,36 @@
             <!-- Card for Adding Existing Car -->
             <div class="card">
                 <h3>Tilføj Eksisterende Bil</h3>
-                <a th:href="@{/addCard}" class="btn-link">Tilføj Bil</a>
+                <a th:href="@{/EmployeeLogin/addCard}" class="btn-link">Tilføj Bil</a>
             </div>
 
             <!-- Card for Buying New Car -->
             <div class="card">
                 <h3>Køb Ny Bil</h3>
-                <a th:href="@{/buyCars}" class="btn-link">Køb Bil</a>
+                <a th:href="@{/EmployeeLogin/buyCars}" class="btn-link">Køb Bil</a>
             </div>
 
             <!-- Card for Car Overview (Employee) -->
             <div class="card">
                 <h3>Oversigt over Udlejede Biler</h3>
-                <a th:href="@{/carOverviewEmployee}" class="btn-link">Se Oversigt</a>
+                <a th:href="@{/EmployeeLogin/carOverviewEmployee}" class="btn-link">Se Oversigt</a>
             </div>
 
             <!-- Card for Damage Report -->
             <div class="card">
                 <h3>Skaderapport</h3>
-                <a th:href="@{/damageReport}" class="btn-link">Vis Skaderapporter</a>
+                <a th:href="@{/EmployeeLogin/damageReport}" class="btn-link">Vis Skaderapporter</a>
             </div>
 
             <!-- Card for Delivering Car -->
             <div class="card">
                 <h3>Lever Bil</h3>
-                <a th:href="@{/deliverCar}" class="btn-link">Lever Bil</a>
+                <a th:href="@{/EmployeeLogin/deliverCar}" class="btn-link">Lever Bil</a>
             </div>
 
             <div class="card">
                 <h3>Søg medarbejder</h3>
-                <a th:href="@{/searchEmployee}" class="btn-link">Søg medarbejder</a>
+                <a th:href="@{/EmployeeLogin/searchEmployee}" class="btn-link">Søg medarbejder</a>
             </div>
         </section>
     </main>
