--- a/src/main/resources/templates/EmployeeLogin/addCar.html
+++ b/src/main/resources/templates/EmployeeLogin/addCar.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add Car</title>
+    <link rel="icon" href="/img/fav.png" type="image/x-icon">
     <link rel="stylesheet" th:href="@{/style.css}" href="/style.css" />
 </head>
 <body class="create-car-page">
