--- a/src/main/resources/templates/EmployeeLogin/dashboard.html
+++ b/src/main/resources/templates/EmployeeLogin/dashboard.html
@@ -9,14 +9,17 @@
 <body>
 
 <div class="layout">
+
     <div class="header">
         <div class="logo">
             <img src="/img/Logo.png" alt="BILABONNEMENT Logo">
         </div>
+        <h3>Medarbejderportal</h3>
         <nav>
             <a th:href="@{/}" class="back-btn">Log ud</a>
         </nav>
     </div>
+
     <section class="hero">
         <h1>Velkommen til Medarbejder Dashboard</h1>
         <p>Administrer bilabonnementer, skaderapporter og medarbejderdata.</p>
