--- a/src/main/resources/templates/Homepage/demo.html
+++ b/src/main/resources/templates/Homepage/demo.html
@@ -12,7 +12,9 @@
   <div class="header">
     <div class="logo">
       <img src="/img/Logo.png" alt="BILABONNEMENT Logo">
-    </div>      <nav>
+    </div>
+
+    <nav>
         <a th:href="@{/}" class="back-btn">Tilbage</a>
       </nav>
   </div>
