--- a/src/main/resources/templates/EmployeeLogin/dashboard.html
+++ b/src/main/resources/templates/EmployeeLogin/dashboard.html
@@ -42,7 +42,7 @@
 
             <!-- Card for Car Overview (Employee) -->
             <div class="card">
-                <h3>Oversigt over Udlejede Biler</h3>
+                <h3>Udlejede Biler</h3>
                 <a th:href="@{/EmployeeLogin/carOverviewEmployee}" class="btn-link">Se Oversigt</a>
             </div>
 
