--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -78,7 +78,7 @@ body {
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(3,1fr);
-    grid-gap: 20px;
+    grid-gap: 30px;
     padding: 30px 20px;
 }
 .card {
@@ -87,16 +87,19 @@ body {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 200px;
+    height: 300px;
     text-align: center;
     font-weight: bold;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
+
 .card h3 {
     color: #003087;
-    margin-bottom: 10px;
+    margin: 0 auto;
 }
+
 .card a {
     margin-top: auto;
     padding: 10px 20px;
