--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -28,6 +28,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .header {
@@ -60,9 +61,9 @@ body {
 }
 
 .header h3 {
+    align-content: center;
     color: #003087;
 }
-
 
 .hero h1 {
     color: #003087;
@@ -214,8 +215,4 @@ body {
 
 .damage-report-details div {
     margin-bottom: 10px;
-}
-
-.logo {
-    picture-scale: 10%;
 }
