--- a/src/main/resources/templates/EmployeeLogin/damageReportHistory.html
+++ b/src/main/resources/templates/EmployeeLogin/damageReportHistory.html
@@ -51,7 +51,7 @@
                     </tbody>
                 </table>
             </div>
-            <a th:href="@{/damage-report}" class="btn-link">Tilbage til Skaderapporter</a>
+            <a th:href="@{/EmployeeLogin/damageReport}" class="btn-link">Tilbage til Skaderapporter</a>
         </section>
     </main>
 
