--- a/src/main/resources/templates/EmployeeLogin/searchEmployee.html
+++ b/src/main/resources/templates/EmployeeLogin/searchEmployee.html
@@ -30,7 +30,7 @@
 
         <h1>Medarbejderoplysninger</h1>
 
-        <form th:action="@{/EmployeeLogin/findEmployee}" method="get" class="search-form">
+        <form action="/findEmployee" method="post">
             <label for="employeeId">Medarbejder ID:</label>
             <input type="number" id="employeeId" name="employeeId" />
 
@@ -47,10 +47,6 @@
             <p><strong>Navn:</strong> <span th:text="${employee.name}"></span></p>
             <p><strong>Email:</strong> <span th:text="${employee.email}"></span></p>
             <p><strong>Rolle:</strong> <span th:text="${employee.role}"></span></p>
-        </div>
-
-        <div th:if="${employee == null}">
-            <p class="error">Der blev ikke fundet nogen medarbejder med de angivne oplysninger.</p>
         </div>
 
     </main>
