--- a/src/main/resources/templates/EmployeeLogin/carOverviewEmployee.html
+++ b/src/main/resources/templates/EmployeeLogin/carOverviewEmployee.html
@@ -13,11 +13,11 @@
 
     <div class="header">
         <div class="logo">
-            <img src="/img/Logo.png" alt="BILABONNEMENT Logo">
+            <a th:href="@{/EmployeeLogin/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
         </div>
         <h3>Medarbejderportal</h3>
         <nav>
-            <a th:href="@{/EmployeeLogin/dashboard}" class="back-btn">Tilbage til Dashboard</a>
+            <a th:href="@{/}" class="back-btn">Log ud</a>
         </nav>
     </div>
 
