--- a/src/main/resources/templates/EmployeeLogin/damageReport.html
+++ b/src/main/resources/templates/EmployeeLogin/damageReport.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <div class="header">
         <div class="logo">
-            <img src="/img/Logo.png" alt="BILABONNEMENT Logo">
+            <a th:href="@{/EmployeeLogin/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
         </div>
         <h3>Medarbejderportal</h3>
         <nav>
