--- a/src/main/resources/templates/EmployeeLogin/damageReportConfirmation.html
+++ b/src/main/resources/templates/EmployeeLogin/damageReportConfirmation.html
@@ -8,15 +8,15 @@
 <body>
 <div class="layout">
 
-  <div class="header">
-    <div class="logo">
-      <img src="/img/Logo.png" alt="Logo">
-    </div>
-    <h3>Skaderapport</h3>
-    <nav>
-      <a th:href="@{/EmployeeLogin/damageReport}" class="back-btn">Tilbage</a>
-    </nav>
+  <<div class="header">
+  <div class="logo">
+    <a th:href="@{/EmployeeLogin/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
   </div>
+  <h3>Medarbejderportal</h3>
+  <nav>
+    <a th:href="@{/}" class="back-btn">Log ud</a>
+  </nav>
+</div>
 
   <main class="main-content">
     <h1>Udfyld Skaderapport for: <span th:text="${car.brand} + ' ' + ${car.model}"></span></h1>
