--- a/src/main/resources/templates/EmployeeLogin/damageReportDone.html
+++ b/src/main/resources/templates/EmployeeLogin/damageReportDone.html
@@ -12,7 +12,7 @@
 
     <div class="header">
         <div class="logo">
-            <img src="/img/Logo.png" alt="BILABONNEMENT Logo">
+            <a th:href="@{/EmployeeLogin/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
         </div>
         <h3>Medarbejderportal</h3>
         <nav>
