--- a/src/main/resources/templates/EmployeeLogin/damageReportHistory.html
+++ b/src/main/resources/templates/EmployeeLogin/damageReportHistory.html
@@ -11,7 +11,7 @@
 <div class="layout">
     <div class="header">
         <div class="logo">
-            <img src="/img/Logo.png" alt="BILABONNEMENT Logo">
+            <a th:href="@{/EmployeeLogin/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
         </div>
         <h3>Medarbejderportal</h3>
         <nav>
