--- a/src/main/resources/templates/EmployeeLogin/searchEmployee.html
+++ b/src/main/resources/templates/EmployeeLogin/searchEmployee.html
@@ -13,17 +13,17 @@
 
     <div class="header">
         <div class="logo">
-            <img src="/img/Logo.png" alt="BILABONNEMENT Logo" />
+            <a th:href="@{/EmployeeLogin/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
         </div>
         <h3>Medarbejderportal</h3>
         <nav>
-            <a th:href="@{/}" class="back-btn">Tilbage</a>
+            <a th:href="@{/}" class="back-btn">Log ud</a>
         </nav>
     </div>
 
     <section class="hero">
         <h1>Velkommen til Medarbejder Dashboard</h1>
-        <p>Administrer bilabonnementer, skaderapporter og medarbejderdata.</p>
+        <p>Her kan du opsøge medarbejdere.</p>
     </section>
 
     <main class="main-content">
